feat: added news and mobile responsive

--- a/baohiemankhangnhuy.html
+++ b/baohiemankhangnhuy.html
@@ -11,8 +11,13 @@
 <body>
   <nav class="head-wrapper">
     <img class="logo" src="https://baovietonline.com.vn/templates/images/logo2x.png" alt="Logo Bảo Việt Đà Nẵng">
-    <ul class="navigation-items">
-      <li class="" onclick="window.location.href='/'">Trang chủ</a></li>
+    <div class="hamburger" onclick="toggleMenu()">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <ul class="navigation-items" id="menu">
+      <li onclick="window.location.href='/index.html'">Trang chủ</li>
       <li class="has-popover">Bảo hiểm nhân thọ
         <div class="popover">
           <ul class="submenu">
@@ -22,7 +27,7 @@
             <li onclick="window.location.href='/baohiemankhanghanhphuc.html'">An Khang Hạnh Phúc</li>
             <li onclick="window.location.href='/baohiemanvuisongkhoe.html'">An vui sống khoẻ</li>
             <li onclick="window.location.href='/baohiemantamhocvan.html'">An tâm học vấn</li>
-            <li onclick="window.location.href='/index.html'">An phát trọn đời</li>
+            <li onclick="window.location.href='/baohiemanphattrondoi.html'">An phát trọn đời</li>
           </ul>
         </div>
       </li>
@@ -39,20 +44,18 @@
           </ul>
         </div>
       </li>
-      <li class="">Tuyển dụng</li>
-
+      <li>Tuyển dụng</li>
     </ul>
     <div class="contact-wrapper">
-      <img class="phone-logo" src="https://img.icons8.com/ios_filled/512/FAB005/apple-phone.png" alt="Phone icon"
-        srcset="">
+      <img class="phone-logo" src="https://img.icons8.com/ios_filled/512/FAB005/apple-phone.png" alt="Phone icon">
       <div class="contact-detail">
         <p class="contact-title">Tư vấn miễn phí</p>
-        <p class="phone-number">0905.499.496</p>
+        <p class="phone-number">0905.499.496 <span style="color: black; font-weight: 600;">/</span>
+          0931.909.697
+        </p>
       </div>
     </div>
-    </div>
   </nav>
-
   <div class="container">
 
     <div class="card-block">
@@ -74,7 +77,11 @@
         <div style="display: flex; gap: 10px; align-items: center;">
           <img style="height: 25px; width: 25px;" class="nav_icon mr-lg-2"
             src="https://seeklogo.com/images/Z/zalo-logo-BB6C937412-seeklogo.com.png" alt="">
-          <a style="font-size: 14px; margin: 0; cursor: pointer;" href="https://zalo.me/84931909697">0905.499.496</a>
+          <a style="font-size: 14px; margin: 0; cursor: pointer; width:fit-content;"
+            href="tel:+84905499496">0905.499.496</a>
+          <span>/</span>
+          <a style="font-size: 14px; margin: 0; cursor: pointer; width:fit-content;"
+            href="https://zalo.me/84931909697">0931.909.697</a>
         </div>
       </div>
     </div>
@@ -100,10 +107,10 @@
 
     <div class="infor-item" style="display: flex; flex-direction: column; width: 75%; margin: 50px auto;">
       <p
-        style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
+        style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274); margin-bottom: 0;">
         QUYỀN LỢI ĐẦU TƯ HẤP DẪN</p>
       <div>
-        <ul style="list-style:number">
+        <ul style="list-style:number; line-height: 150%;">
           <li><b style="color: #0060ae;">Quyền lợi đáo hạn:</b> Khách hàng
             được nhận 100% Giá trị Tài khoản Hợp đồng tại Ngày đáo hạn hợp đồng</li>
         </ul>
@@ -112,13 +119,13 @@
 
     <div class="infor-item" style="display: flex; flex-direction: column; width: 75%; margin: 50px auto;">
       <p
-        style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
+        style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274); margin-bottom: 0;">
         QUYỀN LỢI BẢO VỆ ƯU VIỆT</p>
       <div>
-        <ul style="list-style:number">
+        <ul style="list-style:number; line-height: 150%;">
           <li style="font-weight: 600; text-transform: uppercase; color: #0060ae;">Quyền lợi tử vong lên đến 25 tỷ đồng
           </li>
-          <p>Chi trả tương ứng với lựa chọn Quyền lợi Cơ bản hoặc Quyền lợi Vượt trội như sau:
+          <p style="margin-top:0;">Chi trả tương ứng với lựa chọn Quyền lợi Cơ bản hoặc Quyền lợi Vượt trội như sau:
             <br />
             - Quyền lợi Cơ bản: Số lớn hơn giữa Giá trị Tài khoản Cơ bản và Số tiền bảo hiểm tử vong; và Giá trị Tài
             khoản Đóng thêm
@@ -129,7 +136,8 @@
           <li style="font-weight: 600; text-transform: uppercase; color: #0060ae;">Quyền lợi thương tật toàn bộ vĩnh
             viễn lên đến 5 tỷ đồng
           </li>
-          <p>Tùy thuộc vào lựa chọn Quyền lợi Tử vong, Khách hàng được chi trả số tiền tương ứng như sau:
+          <p style="margin-top:0;">Tùy thuộc vào lựa chọn Quyền lợi Tử vong, Khách hàng được chi trả số tiền tương ứng
+            như sau:
             <br />
             - Quyền lợi Cơ bản: Số lớn hơn giữa Giá trị Tài khoản Cơ bản và Số tiền bảo hiểm thương tật toàn bộ vĩnh
             viễn; và Giá trị Tài khoản Đóng thêm
@@ -155,11 +163,12 @@
 
     <div class="infor-item" style="display: flex; flex-direction: column; width: 75%; margin: 50px auto;">
       <p
-        style="text-transform: uppercase; font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
+        style="text-transform: uppercase; font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274); margin-bottom: 0;">
         GIẢI PHÁP Linh hoạt</p>
       <div>
-        <ul style="list-style:number">
-          <p style="margin-top: 0;">Linh hoạt tuỳ chỉnh giải pháp phù hợp với nhu cầu và tình hình tài chính cá nhân:
+        <ul style="list-style:number; line-height: 150%;">
+          <p style="margin-top: 0; line-height:150%">Linh hoạt tuỳ chỉnh giải pháp phù hợp với nhu cầu và tình hình tài
+            chính cá nhân:
             <br />
             - Linh hoạt lựa chọn Số tiền bảo hiểm, Thời hạn đóng phí dự kiến.
             <br />
@@ -178,11 +187,12 @@
 
     <div class="infor-item" style="display: flex; flex-direction: column; width: 75%; margin: 50px auto;">
       <p
-        style="text-transform: uppercase; font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
+        style="text-transform: uppercase; font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274); margin-bottom: 0;">
         GIA TĂNG BẢO VỆ Gia đình</p>
       <div>
-        <ul style="list-style:number">
-          <p style="margin-top: 0;">Khách hàng được tham gia thêm đa dạng các Sản phẩm bán kèm cho cả bản thân và người
+        <ul style="list-style:number; line-height: 150%;">
+          <p style="margin-top: 0; line-height:150%">Khách hàng được tham gia thêm đa dạng các Sản phẩm bán kèm cho cả
+            bản thân và người
             thân trong gia đình:
             <br />
             • Nhóm sản phẩm chăm sóc sức khỏe.
@@ -207,7 +217,7 @@
       <div class="infor-col">
         <p class="title">Thông tin liên hệ</p>
         <ul>
-          <li>Số điện thoại: 0905.499.496</li>
+          <li>Số điện thoại: 0905.499.496 / 0931.909.697</li>
           <li>Gmail: <a href="mailto:vanthangnguyen1802@gmail.com">
               vanthangnguyen1802@gmail.com
             </a></li>
@@ -226,7 +236,7 @@
       </div>
       <div class="infor-col">
         <p class="title">Giải thưởng danh giá</p>
-        <p>Bảo hiểm phi nhân thọ tốt nhất Việt Nam</p>
+        <p style="margin-top:0;">Bảo hiểm phi nhân thọ tốt nhất Việt Nam</p>
         <div style="display: flex; gap: 12px">
           <img class="icon_gt" src="https://baovietonline.com.vn/uploads/content/e3753335c1f0f2538ee6fc0f07e4b2b0.png"
             alt="">
@@ -241,5 +251,10 @@
     </div>
   </footer>
 </body>
+<script>
+  function toggleMenu() {
+    document.getElementById("menu").classList.toggle("active");
+  }
+</script>
 
 </html>
