--- a/baohiemanphattrondoi.html
+++ b/baohiemanphattrondoi.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bảo hiểm liên kết chung An Tâm Hoạch Định</title>
+  <title>An Phát Trọn Đời</title>
   <link rel="stylesheet" href="/style.css" />
 </head>
 
@@ -65,11 +65,10 @@
         <div style="display: flex; flex-direction: column; gap: 10px; width: 60%;">
           <p
             style="text-transform: capitalize; font-size: 24px; font-weight: 600; color: #0060ae; margin: 0; line-height: normal;">
-            Bảo hiểm liên kết chung An Tâm Hoạch Định</p>
+            An Phát Trọn Đời</p>
           <p style="margin: 0; font-size: 14px;">
-            Sản phẩm bảo hiểm liên kết chung An Tâm Hoạch Định sẽ luôn là người đồng hành tin cậy, là điểm tựa vững vàng
-            để bạn an tâm xây dựng những kế hoạch lâu dài, kiến tạo cuộc sống khỏe mạnh, sung túc, đủ đầy, hạnh phúc bền
-            lâu.
+            Hãy cùng giải pháp Bảo hiểm - Tài chính hoàn hảo “An PhátTrọn Đời” của Bảo Việt Nhân thọ nâng đỡ và biến
+            những mong ước trở thành hiện thực.
           </p>
         </div>
 
@@ -92,44 +91,49 @@
       <div class="hightlight-btn">
         <img class="hightlight-btn-img"
           src="https://baovietonline.com.vn/uploads/product/0537f8e14db87f4cfe2276e9409a5317.png" alt="" srcset="">
-        <p style="font-size: 14px;">Tích lũy vượt trội</p>
+        <p style="font-size: 14px;">Gia đình bạn sẽ được bảo vệ trọn đời.</p>
       </div>
       <div class="hightlight-btn">
         <img class="hightlight-btn-img"
           src="https://baovietonline.com.vn/uploads/product/ec5162fc50c250e779284add2bc241de.png" alt="" srcset="">
-        <p style="font-size: 14px;">Đa dạng quyền lợi</p>
+        <p style="font-size: 14px;">Điều chỉnh phí đóng linh hoạt trong quá trình tham gia.</p>
       </div>
       <div class="hightlight-btn">
         <img class="hightlight-btn-img"
           src="https://baovietonline.com.vn/uploads/product/88de92111393edc20eb0ebc9a30af9a0.png" alt="" srcset="">
-        <p style="font-size: 14px;">Bảo vệ dài lâu</p>
+        <p style="font-size: 14px;">Ứng trước 50% Quyền lợi bảo hiểm Tử vong (tối đa 500 triệu) với Bệnh hiểm nghèo giai
+          đoạn cuối.</p>
+      </div>
+      <div class="hightlight-btn">
+        <img class="hightlight-btn-img"
+          src="https://baovietonline.com.vn/uploads/product/88de92111393edc20eb0ebc9a30af9a0.png" alt="" srcset="">
+        <p style="font-size: 14px;">Cơ hội lựa chọn số tiền bảo hiểm tự động gia tăng 5%/năm.</p>
       </div>
     </div>
 
     <div class="infor-item" style="display: flex; flex-direction: column; width: 75%; margin: 50px auto;">
       <p
         style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274); margin-bottom: 0;">
-        QUYỀN LỢI ĐẦU TƯ HẤP DẪN</p>
+        Bảo vệ</p>
       <div>
         <ul style="list-style:number; line-height: 150%;">
-          <li style="font-weight: 600; text-transform: uppercase; color: #0060ae;">Quyền lợi đáo hạn</li>
-          <p style="margin-top:0;">Khách hàng được nhận 100% Giá trị Tài khoản Hợp đồng tại Ngày đáo hạn hợp đồng.</p>
-          <li style="font-weight: 600; text-transform: uppercase; color: #0060ae;">Quyền lợi Thưởng duy trì Hợp đồng
+          <li style="font-weight: 600; text-transform: uppercase; color: #0060ae;">Quyền lợi bảo hiểm Tử vong (2 lựa
+            chọn)</li>
+          <p style="line-height:150%;">- Quyền lợi Cơ bản (Giá trị tích lũy cao): Bằng giá trị lớn hơn giữa Số tiền
+            bảo hiểm (gia tăng) và Giá trị
+            Tài khoản Hợp đồng tại thời điểm xảy ra tử vong<br />
+            - Quyền lợi Vượt trội (Giá trị bảo vệ cao): Bằng tổng của Số tiền bảo hiểm (gia tăng) và Giá trị Tài khoản
+            Hợp đồng tại thời điểm xảy ra tử vong.</p>
+          <li style="font-weight: 600; text-transform: uppercase; color: #0060ae;">Quyền lợi bảo hiểm Thương tật toàn bộ
+            vĩnh viễn do tai nạn
           </li>
-          <p style="margin-top:0;">Các khoản thưởng dành cho Khách hàng gắn kết bền vững được trả vào Tài khoản Đóng
-            thêm tại Ngày kỷ niệm hợp
-            đồng lần thứ 5, 10, 15 và 20, bao gồm:
-            <br />
-            • Thưởng duy trì hợp đồng trên Tài khoản Cơ bản: 1% Giá trị Tài khoản Cơ bản trung bình trong thời
-            hạn xét thưởng.
-            <br />
-            • Thưởng duy trì hợp đồng trên Tài khoản Đóng thêm: 1% Giá trị Tài khoản Đóng thêm trung
-            bình trong thời hạn xét thưởng.
-            <br />
-            <br />
-            Chú thích: * Điều kiện nhận Thưởng duy trì hợp đồng được quy định tại Quy
-            tắc, Điều khoản sản phẩm.
-          </p>
+          <p style="margin-top:0;">Chi trả quyền lợi bằng 100% Quyền lợi bảo hiểm Tử vong</p>
+          <li style="font-weight: 600; text-transform: uppercase; color: #0060ae;">Quyền lợi bảo hiểm Bệnh hiểm nghèo
+          </li>
+          <p style="margin-top:0;">Ứng trước 50% Quyền lợi bảo hiểm Tử vong, tối đa 500 triệu đồng</p>
+          <li style="font-weight: 600; text-transform: uppercase; color: #0060ae;">Có thể lựa chọn Số tiền bảo hiểm tự
+            động gia tăng 5% hàng năm
+          </li>
         </ul>
       </div>
     </div>
@@ -137,43 +141,31 @@
     <div class="infor-item" style="display: flex; flex-direction: column; width: 75%; margin: 50px auto;">
       <p
         style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274); margin-bottom: 0;">
-        QUYỀN LỢI BẢO VỆ ƯU VIỆT</p>
+        Đầu tư tiết kiệm</p>
       <div>
         <ul style="list-style:number; line-height: 150%;">
-          <li style="font-weight: 600; text-transform: uppercase; color: #0060ae;">Quyền lợi tử vong lên đến 25 tỷ đồng
+          <li style="font-weight: 600; text-transform: uppercase; color: #0060ae;">Quyền lợi đáo hạn
           </li>
-          <p style="line-height:150%;">Chi trả tương ứng với lựa chọn Quyền lợi Cơ bản hoặc Quyền lợi Vượt trội như sau:
-            <br />
-            - Quyền lợi Cơ bản: Số lớn hơn giữa Giá trị Tài khoản Cơ bản và Số tiền bảo hiểm tử vong; và Giá trị Tài
-            khoản Đóng thêm
-            <br />
-            - Quyền lợi Vượt trội: Chi trả số tiền bằng tổng của Giá trị Tài khoản Cơ bản; và Số tiền bảo hiểm tử vong;
-            và Giá trị Tài khoản Đóng thêm.
+          <p style="line-height:150%;">Khi Người được bảo hiểm sống đến độ tuổi mà Quý khách đã lựa chọn để nhận Quyền
+            lợi đáo hạn tại thời điểm
+            yêu cầu bảo hiểm, Bảo Việt Nhân thọ sẽ chi trả toàn bộ 100% Giá trị Tài khoản Hợp đồng (sau khi trừ các
+            khoản nợ (nếu có)).
           </p>
-          <li style="font-weight: 600; text-transform: uppercase; color: #0060ae;">Quyền lợi thương tật toàn bộ vĩnh
-            viễn lên đến 5 tỷ đồng
+          <li style="font-weight: 600; text-transform: uppercase; color: #0060ae;">Khách hàng được hưởng lãi suất đầu tư
           </li>
-          <p style="line-height:150%;">Tùy thuộc vào lựa chọn Quyền lợi Tử vong, Khách hàng được chi trả số tiền tương
-            ứng như sau:
-            <br />
-            - Quyền lợi Cơ bản: Số lớn hơn giữa Giá trị Tài khoản Cơ bản và Số tiền bảo hiểm thương tật toàn bộ vĩnh
-            viễn; và Giá trị Tài khoản Đóng thêm
-            <br />
-            - Quyền lợi Vượt trội: Chi trả số tiền bằng tổng của Giá trị Tài khoản Cơ bản; và Số tiền bảo hiểm thương
-            tật toàn bộ vĩnh viễn; và Giá trị Tài khoản Đóng thêm.
-            <br />
-            <br />
-
-            Chú thích:
-            <br />
-            * Số tiền bảo hiểm được điều chỉnh đối với Người được bảo hiểm dưới 4 tuổi theo Quy tắc, Điều khoản sản
-            phẩm.
-            <br />
-            * Quyền lợi Vượt trội sẽ tự động chuyển thành Quyền lợi Cơ bản kể từ Ngày kỷ niệm hợp đồng khi Người được
-            bảo hiểm đạt 65 tuổi.
-            <br />
-            * Quyền lợi Thương tật toàn bộ vĩnh viễn chấm dứt hiệu lực khi Người được bảo hiểm kết thúc tuổi 69.
+          <p style="line-height:150%;">Khách hàng được hưởng lãi suất đầu tư được công bố sau khi kết thúc mỗi năm tài
+            chính và không thấp hơn lãi
+            suất cam kết tối thiểu.
           </p>
+          <li style="font-weight: 600; text-transform: uppercase; color: #0060ae;">Hưởng Quyền lợi Thưởng gia tăng giá
+            trị tài khoản:
+          </li>
+          <p style="line-height:150%;">Bảo Việt Nhân thọ sẽ chi trả cho Khách hàng mỗi năm bằng cách cộng vào Giá trị
+            tài khoản Hợp đồng khi Hợp đồng thỏa mãn quy định tại Điều khoản. Hợp đồng càng có giá trị lớn thì quyền lợi
+            Thưởng càng cao.
+          </p>
+          <li style="font-weight: 600; text-transform: uppercase; color: #0060ae;">Hưởng Quyền lợi Duy trì hợp đồng
+          </li>
         </ul>
       </div>
     </div>
@@ -184,19 +176,15 @@
         GIẢI PHÁP Linh hoạt</p>
       <div>
         <ul style="list-style:number; line-height: 150%;">
-          <p style="margin-top: 0; line-height: 150%;">Linh hoạt tuỳ chỉnh giải pháp phù hợp với nhu cầu và tình hình
-            tài chính cá nhân:
+          <p style="margin-top: 0; line-height: 150%;">1. Linh hoạt lựa chọn, điều chinh số tiền bảo hiểm, thay đổi
+            Quyền lợi bảo hiểm tử
+            vong, điều chỉnh Tỷ lệ gia tăng Số tiền bảo hiểm.
             <br />
-            - Linh hoạt lựa chọn Số tiền bảo hiểm, Thời hạn đóng phí dự kiến.
+            2. Linh hoạt trong đóng phí bảo hiểm: thay đổi số phí bảo hiểm, tạm ngừng đóng phí, thay đổi định kỳ đóng
+            phí, thời hạn đóng phí hoặc đóng thêm phí
             <br />
-            - Linh hoạt tùy chỉnh mức phí đóng.
-            <br />
-            - Linh hoạt rút tiền từ Giá trị Tài khoản Hợp đồng để đáp ứng nhu cầu tài chính cấp thiết.
-            <br />
-            - Thay đổi Số tiền bảo hiểm, lựa chọn Quyền lợi bảo hiểm tử vong theo nhu cầu Khách hàng tại từng giai đoạn
-            của cuộc sống.
-            <br />
-            - Lựa chọn tiếp tục/tạm dừng đóng phí sau khi kết thúc Thời hạn đóng phí dự kiến.
+            3. Linh hoạt trong Tạm ứng, rút tiền hoặc khôi phục, chấm dứt Hợp đồng
+
           </p>
         </ul>
       </div>
@@ -208,7 +196,7 @@
         GIA TĂNG BẢO VỆ Gia đình</p>
       <div>
         <ul style="list-style:number; line-height: 150%;">
-          <p style="margin-top: 0; line-height:150%">Khách hàng được tham gia thêm đa dạng các Sản phẩm bán kèm cho cả
+          <p style="margin-top: 0; line-height: 150%;">Khách hàng được tham gia thêm đa dạng các Sản phẩm bán kèm cho cả
             bản thân và người
             thân trong gia đình:
             <br />
