--- a/baohiemankhanghanhphuc.html
+++ b/baohiemankhanghanhphuc.html
@@ -11,8 +11,13 @@
 <body>
   <nav class="head-wrapper">
     <img class="logo" src="https://baovietonline.com.vn/templates/images/logo2x.png" alt="Logo Bảo Việt Đà Nẵng">
-    <ul class="navigation-items">
-      <li class="" onclick="window.location.href='/'">Trang chủ</a></li>
+    <div class="hamburger" onclick="toggleMenu()">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <ul class="navigation-items" id="menu">
+      <li onclick="window.location.href='/index.html'">Trang chủ</li>
       <li class="has-popover">Bảo hiểm nhân thọ
         <div class="popover">
           <ul class="submenu">
@@ -22,7 +27,7 @@
             <li onclick="window.location.href='/baohiemankhanghanhphuc.html'">An Khang Hạnh Phúc</li>
             <li onclick="window.location.href='/baohiemanvuisongkhoe.html'">An vui sống khoẻ</li>
             <li onclick="window.location.href='/baohiemantamhocvan.html'">An tâm học vấn</li>
-            <li onclick="window.location.href='/index.html'">An phát trọn đời</li>
+            <li onclick="window.location.href='/baohiemanphattrondoi.html'">An phát trọn đời</li>
           </ul>
         </div>
       </li>
@@ -39,20 +44,18 @@
           </ul>
         </div>
       </li>
-      <li class="">Tuyển dụng</li>
-
+      <li>Tuyển dụng</li>
     </ul>
     <div class="contact-wrapper">
-      <img class="phone-logo" src="https://img.icons8.com/ios_filled/512/FAB005/apple-phone.png" alt="Phone icon"
-        srcset="">
+      <img class="phone-logo" src="https://img.icons8.com/ios_filled/512/FAB005/apple-phone.png" alt="Phone icon">
       <div class="contact-detail">
         <p class="contact-title">Tư vấn miễn phí</p>
-        <p class="phone-number">0905.499.496</p>
+        <p class="phone-number">0905.499.496 <span style="color: black; font-weight: 600;">/</span>
+          0931.909.697
+        </p>
       </div>
     </div>
-    </div>
   </nav>
-
   <div class="container">
 
     <div class="card-block">
@@ -75,7 +78,11 @@
         <div style="display: flex; gap: 10px; align-items: center;">
           <img style="height: 25px; width: 25px;" class="nav_icon mr-lg-2"
             src="https://seeklogo.com/images/Z/zalo-logo-BB6C937412-seeklogo.com.png" alt="">
-          <a style="font-size: 14px; margin: 0; cursor: pointer;" href="https://zalo.me/84931909697">0905.499.496</a>
+          <a style="font-size: 14px; margin: 0; cursor: pointer; width:fit-content;"
+            href="tel:+84905499496">0905.499.496</a>
+          <span>/</span>
+          <a style="font-size: 14px; margin: 0; cursor: pointer; width:fit-content;"
+            href="https://zalo.me/84931909697">0931.909.697</a>
         </div>
       </div>
     </div>
@@ -106,13 +113,13 @@
 
     <div class="infor-item" style="display: flex; flex-direction: column; width: 75%; margin: 50px auto;">
       <p
-        style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
+        style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274); margin-bottom: 0;">
         BẢO VỆ</p>
       <div>
-        <ul style="list-style:number">
+        <ul style="list-style:number; line-height: 150%;">
           <li style="color: #0060ae; font-weight: 600;">
             Quyền lợi bảo hiểm Tử vong</li>
-          <p>
+          <p style="margin-top:0;">
             Lựa chọn Quyền lợi Cơ bản hoặc Quyền lợi vượt trội<br />
             - Quyền lợi Cơ bản (Giá trị tích lũy cao): Bằng giá trị lớn hơn giữa Số tiền bảo hiểm tử vong và Giá trị Tài
             khoản Hợp đồng tại thời điểm xảy ra tử vong<br />
@@ -123,14 +130,14 @@
           <li style="color: #0060ae; font-weight: 600;">
             Quyền lợi Thương tật nghiêm trọng do tai nạn
           </li>
-          <p>
+          <p style="margin-top:0;">
             Chi trả quyền lợi bằng 100% Quyền lợi bảo hiểm Tử vong
           </p>
 
           <li style="color: #0060ae; font-weight: 600;">
             Quyền lợi bệnh hiểm nghèo giai đoạn cuối lên đến 500 triệu đồng
           </li>
-          <p>
+          <p style="margin-top:0;">
             Hỗ trợ ứng trước 50% Quyền lợi Tử vong và số tiền này sẽ được đối trừ khi chi trả các quyền lợi khác hoăc
             khi chấm dứt hợp đồng
           </p>
@@ -138,7 +145,7 @@
           <li style="color: #0060ae; font-weight: 600;">
             Quyền lợi Tử vong do tai nạn mở rộng lên đến 10 tỷ đồng (áp dụng cho Gói VIP2, VIP3)
           </li>
-          <p>
+          <p style="margin-top:0;">
             - Tai nạn máy bay: 200% Số tiền bảo hiểm tử vong do tai nạn mở rộng
             <br />
             - Tai nạn thông thường: 100% Số tiền bảo hiểm tử vong do tai nạn mở rộng
@@ -147,14 +154,14 @@
           <li style="color: #0060ae; font-weight: 600;">
             Quyền lợi bảo hiểm các Bệnh nan y lên đến 2,5 tỷ đồng (áp dụng cho Gói VIP2, VIP3)
           </li>
-          <p>
+          <p style="margin-top:0;">
             Bảo vệ trước bệnh Ung thư giai đoạn đầu và cuối, đột quỵ, nhồi máu cơ tim
           </p>
 
           <li style="color: #0060ae; font-weight: 600;">
             Quyền lợi chăm sóc y tế lên đến 2 tỷ đồng (áp dụng cho Gói VIP3)
           </li>
-          <p>
+          <p style="margin-top:0;">
             - Trợ cấp viện phí cơ bản: lên đến 2 triệu đồng/ngày<br />
             - Trợ cấp viện phí đặc biệt: lên tới 4 triệu đồng/ngày<br />
             - Hỗ trợ chi phí phẫu thuật: lên tới 10 triệu đồng/lần<br />
@@ -166,10 +173,10 @@
 
     <div class="infor-item" style="display: flex; flex-direction: column; width: 75%; margin: 50px auto;">
       <p
-        style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
+        style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274); margin-bottom: 0;">
         ĐẦU TƯ TIẾT KIỆM</p>
       <div>
-        <ul style="list-style:number">
+        <ul style="list-style:number; line-height: 150%;">
           <li style="font-weight: 600; color: #0060ae;">Quyền lợi đáo hạn:
           </li>
           <p style="line-height: normal;">Khi Người được bảo hiểm sống đến độ tuổi mà Quý khách đã lựa chọn
@@ -187,7 +194,8 @@
             Tài khoản Hợp đồng tại Ngày kỷ niệm Hợp đồng lần thứ 10 và lần thứ 20.</p>
           <li style="font-weight: 600; color: #0060ae;">Hưởng Quyền lợi Thưởng gia tăng giá trị tài khoản:
           </li>
-          <p>Bảo Việt Nhân thọ sẽ chi trả cho Khách hàng mỗi năm bằng cách cộng vào Giá trị tài khoản
+          <p style="margin-top:0;">Bảo Việt Nhân thọ sẽ chi trả cho Khách hàng mỗi năm bằng cách cộng vào Giá trị tài
+            khoản
             Hợp đồng khi Hợp
             đồng thỏa mãn quy định tại Điều khoản. Hợp đồng càng có giá trị lớn thì quyền lợi Thưởng càng cao.
           </p>
@@ -203,10 +211,10 @@
 
     <div class="infor-item" style="display: flex; flex-direction: column; width: 75%; margin: 50px auto;">
       <p
-        style="text-transform: uppercase; font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
+        style="text-transform: uppercase; font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274); margin-bottom: 0;">
         GIẢI PHÁP Linh hoạt</p>
       <div>
-        <p style="margin-top: 0;">
+        <p style="margin-top: 0; line-height:150%">
           Có thể lựa chọn các chương trình CƠ BẢN (VIP1), chương trình NÂNG CAO (VIP2) hoặc chương trình CAO CẤP (VIP3)
           nhằm gia tăng thêm các quyền lợi bảo vệ cho gia đình
           <br />
@@ -252,11 +260,12 @@
 
     <div class="infor-item" style="display: flex; flex-direction: column; width: 75%; margin: 50px auto;">
       <p
-        style="text-transform: uppercase; font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
+        style="text-transform: uppercase; font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274); margin-bottom: 0;">
         GIA TĂNG BẢO VỆ Gia đình</p>
       <div>
-        <ul style="list-style:number">
-          <p style="margin-top: 0;">Khách hàng được tham gia thêm đa dạng các Sản phẩm bán kèm cho cả bản thân và người
+        <ul style="list-style:number; line-height: 150%;">
+          <p style="margin-top: 0; line-height:150%">Khách hàng được tham gia thêm đa dạng các Sản phẩm bán kèm cho cả
+            bản thân và người
             thân trong gia đình:
             <br />
             • Nhóm sản phẩm chăm sóc sức khỏe.
@@ -281,7 +290,7 @@
       <div class="infor-col">
         <p class="title">Thông tin liên hệ</p>
         <ul>
-          <li>Số điện thoại: 0905.499.496</li>
+          <li>Số điện thoại: 0905.499.496 / 0931.909.697</li>
           <li>Gmail: <a href="mailto:vanthangnguyen1802@gmail.com">
               vanthangnguyen1802@gmail.com
             </a></li>
@@ -300,7 +309,7 @@
       </div>
       <div class="infor-col">
         <p class="title">Giải thưởng danh giá</p>
-        <p>Bảo hiểm phi nhân thọ tốt nhất Việt Nam</p>
+        <p style="margin-top:0;">Bảo hiểm phi nhân thọ tốt nhất Việt Nam</p>
         <div style="display: flex; gap: 12px">
           <img class="icon_gt" src="https://baovietonline.com.vn/uploads/content/e3753335c1f0f2538ee6fc0f07e4b2b0.png"
             alt="">
@@ -315,5 +324,10 @@
     </div>
   </footer>
 </body>
+<script>
+  function toggleMenu() {
+    document.getElementById("menu").classList.toggle("active");
+  }
+</script>
 
 </html>
