--- a/baohiemanphatcattuong.html
+++ b/baohiemanphatcattuong.html
@@ -11,8 +11,13 @@
 <body>
   <nav class="head-wrapper">
     <img class="logo" src="https://baovietonline.com.vn/templates/images/logo2x.png" alt="Logo Bảo Việt Đà Nẵng">
-    <ul class="navigation-items">
-      <li class="" onclick="window.location.href='/'">Trang chủ</a></li>
+    <div class="hamburger" onclick="toggleMenu()">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <ul class="navigation-items" id="menu">
+      <li onclick="window.location.href='/index.html'">Trang chủ</li>
       <li class="has-popover">Bảo hiểm nhân thọ
         <div class="popover">
           <ul class="submenu">
@@ -22,7 +27,7 @@
             <li onclick="window.location.href='/baohiemankhanghanhphuc.html'">An Khang Hạnh Phúc</li>
             <li onclick="window.location.href='/baohiemanvuisongkhoe.html'">An vui sống khoẻ</li>
             <li onclick="window.location.href='/baohiemantamhocvan.html'">An tâm học vấn</li>
-            <li onclick="window.location.href='/index.html'">An phát trọn đời</li>
+            <li onclick="window.location.href='/baohiemanphattrondoi.html'">An phát trọn đời</li>
           </ul>
         </div>
       </li>
@@ -39,20 +44,18 @@
           </ul>
         </div>
       </li>
-      <li class="">Tuyển dụng</li>
-
+      <li>Tuyển dụng</li>
     </ul>
     <div class="contact-wrapper">
-      <img class="phone-logo" src="https://img.icons8.com/ios_filled/512/FAB005/apple-phone.png" alt="Phone icon"
-        srcset="">
+      <img class="phone-logo" src="https://img.icons8.com/ios_filled/512/FAB005/apple-phone.png" alt="Phone icon">
       <div class="contact-detail">
         <p class="contact-title">Tư vấn miễn phí</p>
-        <p class="phone-number">0905.499.496</p>
+        <p class="phone-number">0905.499.496 <span style="color: black; font-weight: 600;">/</span>
+          0931.909.697
+        </p>
       </div>
     </div>
-    </div>
   </nav>
-
   <div class="container">
 
     <div class="card-block">
@@ -74,7 +77,11 @@
         <div style="display: flex; gap: 10px; align-items: center;">
           <img style="height: 25px; width: 25px;" class="nav_icon mr-lg-2"
             src="https://seeklogo.com/images/Z/zalo-logo-BB6C937412-seeklogo.com.png" alt="">
-          <a style="font-size: 14px; margin: 0; cursor: pointer;" href="https://zalo.me/84931909697">0905.499.496</a>
+          <a style="font-size: 14px; margin: 0; cursor: pointer; width:fit-content;"
+            href="tel:+84905499496">0905.499.496</a>
+          <span>/</span>
+          <a style="font-size: 14px; margin: 0; cursor: pointer; width:fit-content;"
+            href="https://zalo.me/84931909697">0931.909.697</a>
         </div>
       </div>
     </div>
@@ -106,13 +113,13 @@
 
     <div class="infor-item" style="display: flex; flex-direction: column; width: 75%; margin: 50px auto;">
       <p
-        style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
+        style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274); margin-bottom: 0;">
         BẢO VỆ</p>
       <div>
-        <ul style="list-style:number">
+        <ul style="list-style:number; line-height: 150%;">
           <li style="color: #0060ae; font-weight: 600;">
             Quyền lợi bảo hiểm Tử vong (2 lựa chọn)</li>
-          <p>
+          <p style="margin-top:0;">
             Quyền lợi Cơ bản (Giá trị tích lũy cao): Bằng giá trị lớn hơn giữa Số tiền bảo hiểm tử vong và Giá trị Tài
             khoản Hợp đồng tại thời điểm xảy ra tử vong
             Quyền lợi Vượt trội (Giá trị bảo vệ cao): Bằng tổng của Số tiền bảo hiểm tử vong và Giá trị Tài khoản Hợp
@@ -122,7 +129,7 @@
           <li style="color: #0060ae; font-weight: 600;">
             Quyền lợi Thương tật nghiêm trọng do tai nạn
           </li>
-          <p>
+          <p style="margin-top:0;">
             - Quyền lợi cơ bản: Chi trả số tiền lớn hơn giữa Số tiền bảo hiểm Thương tật nghiêm trọng do tai nạn và Giá
             trị Tài khoản Hợp đồng
             <br />
@@ -134,7 +141,7 @@
           <li style="color: #0060ae; font-weight: 600;">
             Quyền lợi Bệnh hiểm nghèo giai đoạn cuối:
           </li>
-          <p>
+          <p style="margin-top:0;">
             Ứng trước 50% Quyền lợi bảo hiểm Tử vong, lên đến 500 triệu đồng
             Miễn phí bảo hiểm rủi ro của Quyền lợi Tử vong và Quyền lợi thương tật nghiêm trọng do tai nạn
           </p>
@@ -142,7 +149,7 @@
           <li style="color: #0060ae; font-weight: 600;">
             Quyền lợi Nâng cao tùy chọn
           </li>
-          <p>
+          <p style="margin-top:0;">
             <b>4.1. Quyền lợi tử vong do tai nạn mở rộng lên đến 10 tỷ đồng</b>
             <br />
             - 200% Số tiền bảo hiểm của Quyền lợi này Đối với tai nạn trên chuyến bay thương mại
@@ -173,13 +180,14 @@
 
     <div class="infor-item" style="display: flex; flex-direction: column; width: 75%; margin: 50px auto;">
       <p
-        style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
+        style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274); margin-bottom: 0;">
         ĐẦU TƯ TIẾT KIỆM</p>
       <div>
-        <ul style="list-style:number">
+        <ul style="list-style:number; line-height: 150%;">
           <li style="font-weight: 600; color: #0060ae;">Quyền lợi đáo hạn:
           </li>
-          <p style="line-height: normal;">Khi Người được bảo hiểm sống đến độ tuổi mà Quý khách đã lựa chọn
+          <p style="line-height: normal; line-height: 150%;">Khi Người được bảo hiểm sống đến độ tuổi mà Quý khách đã
+            lựa chọn
             để nhận Quyền lợi đáo
             hạn tại thời điểm
             yêu cầu bảo hiểm, Bảo Việt Nhân thọ sẽ chi trả toàn bộ 100% Giá trị Tài khoản Hợp đồng (sau khi trừ các
@@ -193,13 +201,15 @@
           </li>
           <li style="font-weight: 600; color: #0060ae;">Hưởng Quyền lợi Thưởng gia tăng giá trị tài khoản:
           </li>
-          <p style="margin: 0;">Bảo Việt Nhân thọ sẽ chi trả cho Khách hàng mỗi năm bằng cách cộng vào Giá trị tài khoản
+          <p style="margin: 0; line-height: 150%;">Bảo Việt Nhân thọ sẽ chi trả cho Khách hàng mỗi năm bằng cách cộng
+            vào Giá trị tài khoản
             Hợp đồng khi Hợp
             đồng thỏa mãn quy định tại Điều khoản. Hợp đồng càng có giá trị lớn thì quyền lợi Thưởng càng cao.
           </p>
           <li style="font-weight: 600; color: #0060ae;">Quyền lợi thưởng gia tăng đầu tư:
           </li>
-          <p style="margin: 0;">Giá trị Tài khoản Hợp đồng tại thời điểm Hợp đồng chấm dứt hiệu lực sẽ được đánh giá và
+          <p style="margin: 0; line-height: 150%;">Giá trị Tài khoản Hợp đồng tại thời điểm Hợp đồng chấm dứt hiệu lực
+            sẽ được đánh giá và
             điều chỉnh (nếu
             cần) để đảm bảo không thấp hơn Giá trị Tài khoản đảm bảo.
           </p>
@@ -209,10 +219,10 @@
 
     <div class="infor-item" style="display: flex; flex-direction: column; width: 75%; margin: 50px auto;">
       <p
-        style="text-transform: uppercase; font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
+        style="text-transform: uppercase; font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274); margin-bottom: 0;">
         GIẢI PHÁP Linh hoạt</p>
       <div>
-        <p>
+        <p style="line-height: 150%;">
           <b>Hình thức đóng phí đa dạng:</b> 1 lần, 5 năm, đóng bằng thời hạn bảo hiểm
           Được lựa chọn và điều chỉnh giải pháp tài chính
           <br />
@@ -231,11 +241,12 @@
 
     <div class="infor-item" style="display: flex; flex-direction: column; width: 75%; margin: 50px auto;">
       <p
-        style="text-transform: uppercase; font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
+        style="text-transform: uppercase; font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274); margin-bottom: 0;">
         GIA TĂNG BẢO VỆ Gia đình</p>
       <div>
-        <ul style="list-style:number">
-          <p style="margin-top: 0;">Khách hàng được tham gia thêm đa dạng các Sản phẩm bán kèm cho cả bản thân và người
+        <ul style="list-style:number; line-height: 150%;">
+          <p style="margin-top: 0; line-height:150%">Khách hàng được tham gia thêm đa dạng các Sản phẩm bán kèm cho cả
+            bản thân và người
             thân trong gia đình:
             <br />
             • Nhóm sản phẩm chăm sóc sức khỏe.
@@ -260,7 +271,7 @@
       <div class="infor-col">
         <p class="title">Thông tin liên hệ</p>
         <ul>
-          <li>Số điện thoại: 0905.499.496</li>
+          <li>Số điện thoại: 0905.499.496 / 0931.909.697</li>
           <li>Gmail: <a href="mailto:vanthangnguyen1802@gmail.com">
               vanthangnguyen1802@gmail.com
             </a></li>
@@ -279,7 +290,7 @@
       </div>
       <div class="infor-col">
         <p class="title">Giải thưởng danh giá</p>
-        <p>Bảo hiểm phi nhân thọ tốt nhất Việt Nam</p>
+        <p style="margin-top:0;">Bảo hiểm phi nhân thọ tốt nhất Việt Nam</p>
         <div style="display: flex; gap: 12px">
           <img class="icon_gt" src="https://baovietonline.com.vn/uploads/content/e3753335c1f0f2538ee6fc0f07e4b2b0.png"
             alt="">
@@ -294,5 +305,10 @@
     </div>
   </footer>
 </body>
+<script>
+  function toggleMenu() {
+    document.getElementById("menu").classList.toggle("active");
+  }
+</script>
 
 </html>
