--- a/baohiemchayno.html
+++ b/baohiemchayno.html
@@ -11,8 +11,13 @@
 <body>
   <nav class="head-wrapper">
     <img class="logo" src="https://baovietonline.com.vn/templates/images/logo2x.png" alt="Logo Bảo Việt Đà Nẵng">
-    <ul class="navigation-items">
-      <li class="" onclick="window.location.href='/'">Trang chủ</a></li>
+    <div class="hamburger" onclick="toggleMenu()">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <ul class="navigation-items" id="menu">
+      <li onclick="window.location.href='/index.html'">Trang chủ</li>
       <li class="has-popover">Bảo hiểm nhân thọ
         <div class="popover">
           <ul class="submenu">
@@ -22,7 +27,7 @@
             <li onclick="window.location.href='/baohiemankhanghanhphuc.html'">An Khang Hạnh Phúc</li>
             <li onclick="window.location.href='/baohiemanvuisongkhoe.html'">An vui sống khoẻ</li>
             <li onclick="window.location.href='/baohiemantamhocvan.html'">An tâm học vấn</li>
-            <li onclick="window.location.href='/index.html'">An phát trọn đời</li>
+            <li onclick="window.location.href='/baohiemanphattrondoi.html'">An phát trọn đời</li>
           </ul>
         </div>
       </li>
@@ -39,20 +44,18 @@
           </ul>
         </div>
       </li>
-      <li class="">Tuyển dụng</li>
-
+      <li>Tuyển dụng</li>
     </ul>
     <div class="contact-wrapper">
-      <img class="phone-logo" src="https://img.icons8.com/ios_filled/512/FAB005/apple-phone.png" alt="Phone icon"
-        srcset="">
+      <img class="phone-logo" src="https://img.icons8.com/ios_filled/512/FAB005/apple-phone.png" alt="Phone icon">
       <div class="contact-detail">
         <p class="contact-title">Tư vấn miễn phí</p>
-        <p class="phone-number">0905.499.496</p>
+        <p class="phone-number">0905.499.496 <span style="color: black; font-weight: 600;">/</span>
+          0931.909.697
+        </p>
       </div>
     </div>
-    </div>
   </nav>
-
   <div class="container">
 
     <div class="card-block">
@@ -73,7 +76,11 @@
         <div style="display: flex; gap: 10px; align-items: center;">
           <img style="height: 25px; width: 25px;" class="nav_icon mr-lg-2"
             src="https://seeklogo.com/images/Z/zalo-logo-BB6C937412-seeklogo.com.png" alt="">
-          <a style="font-size: 14px; margin: 0; cursor: pointer;" href="https://zalo.me/84931909697">0905.499.496</a>
+          <a style="font-size: 14px; margin: 0; cursor: pointer; width:fit-content;"
+            href="tel:+84905499496">0905.499.496</a>
+          <span>/</span>
+          <a style="font-size: 14px; margin: 0; cursor: pointer; width:fit-content;"
+            href="https://zalo.me/84931909697">0931.909.697</a>
         </div>
       </div>
     </div>
@@ -112,7 +119,7 @@
 
     <div class="infor-item" style="flex-direction: column ;margin: 50px auto;">
       <p
-        style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
+        style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274); margin-bottom: 0;">
         Khách hàng</p>
       <div>
         <ul style="list-style:disc">
@@ -125,7 +132,7 @@
 
     <div class="infor-item" style="flex-direction: column; margin: 50px auto;">
       <p
-        style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
+        style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274); margin-bottom: 0;">
         Phạm vi bảo hiểm</p>
       <div style="display: flex; justify-content: center; gap: 20px">
         <img style="width: 50px; height: 50px;"
@@ -134,7 +141,7 @@
           <p style="font-weight: 600; margin:0;">Bảo hiểm cho rủi ro Cháy và Nổ theo quy định của pháp luật về Bảo
             hiểm Cháy, Nổ
             bắt buộc</p>
-          <p>Áp dụng cho toàn bộ tài sản của cơ sở có nguy hiểm về cháy, nổ, bao gồm:<br />
+          <p style="margin-top:0;">Áp dụng cho toàn bộ tài sản của cơ sở có nguy hiểm về cháy, nổ, bao gồm:<br />
             a. Nhà, công trình và các tài sản gắn liền với nhà, công trình; máy móc, thiết bị.<br />
             b. Các loại hàng hóa, vật tư (bao gồm cả nguyên vật liệu, bán thành phẩm, thành phẩm).</p>
         </div>
@@ -143,7 +150,7 @@
 
     <div class="infor-item" style="flex-direction: column; margin: 50px auto; display: flex; flex-direction: column;">
       <p
-        style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
+        style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274); margin-bottom: 0;">
         Tài liệu biểu mẫu</p>
       <div id="documentation" style="display: flex; gap: 20px; width: 100%; align-items: start;">
         <img
@@ -156,7 +163,7 @@
             <div style="display: flex; gap: 10px; align-items: center;">
               <img style="width: 17px; height: 19px;"
                 src="https://baovietonline.com.vn/templates/images/icon_tai_lieu_bieu_mau.png" alt="" srcset="">
-              <p>Giấy yêu cầu bảo hiểm</p>
+              <p style="margin-top:0;">Giấy yêu cầu bảo hiểm</p>
             </div>
             <a style="display: flex; gap:10px; align-items: center; width: fit-content; cursor: pointer;"
               href="https://baovietonline.com.vn/uploads/attachment/giay-yeu-cau-bao-hiem-bao-hiem-chay-no-bat-buoc-vi.xlsx">
@@ -170,7 +177,7 @@
             <div style="display: flex; gap: 10px; align-items: center;">
               <img style="width: 17px; height: 19px;"
                 src="https://baovietonline.com.vn/templates/images/icon_tai_lieu_bieu_mau.png" alt="" srcset="">
-              <p>Tờ rơi</p>
+              <p style="margin-top:0;">Tờ rơi</p>
             </div>
             <a style="display: flex; gap:10px; align-items: center; width: fit-content; cursor: pointer;"
               href="https://baovietonline.com.vn/uploads/attachment/to-roi-bao-hiem-chay-no-bat-buoc-vi.pdf">
@@ -198,7 +205,7 @@
       <div class="infor-col">
         <p class="title">Thông tin liên hệ</p>
         <ul>
-          <li>Số điện thoại: 0905.499.496</li>
+          <li>Số điện thoại: 0905.499.496 / 0931.909.697</li>
           <li>Gmail: <a href="mailto:vanthangnguyen1802@gmail.com">
               vanthangnguyen1802@gmail.com
             </a></li>
@@ -217,7 +224,7 @@
       </div>
       <div class="infor-col">
         <p class="title">Giải thưởng danh giá</p>
-        <p>Bảo hiểm phi nhân thọ tốt nhất Việt Nam</p>
+        <p style="margin-top:0;">Bảo hiểm phi nhân thọ tốt nhất Việt Nam</p>
         <div style="display: flex; gap: 12px">
           <img class="icon_gt" src="https://baovietonline.com.vn/uploads/content/e3753335c1f0f2538ee6fc0f07e4b2b0.png"
             alt="">
@@ -232,5 +239,10 @@
     </div>
   </footer>
 </body>
+<script>
+  function toggleMenu() {
+    document.getElementById("menu").classList.toggle("active");
+  }
+</script>
 
 </html>
