--- a/baohiemtravel.html
+++ b/baohiemtravel.html
@@ -11,8 +11,13 @@
 <body>
   <nav class="head-wrapper">
     <img class="logo" src="https://baovietonline.com.vn/templates/images/logo2x.png" alt="Logo Bảo Việt Đà Nẵng">
-    <ul class="navigation-items">
-      <li class="" onclick="window.location.href='/'">Trang chủ</a></li>
+    <div class="hamburger" onclick="toggleMenu()">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <ul class="navigation-items" id="menu">
+      <li onclick="window.location.href='/index.html'">Trang chủ</li>
       <li class="has-popover">Bảo hiểm nhân thọ
         <div class="popover">
           <ul class="submenu">
@@ -22,7 +27,7 @@
             <li onclick="window.location.href='/baohiemankhanghanhphuc.html'">An Khang Hạnh Phúc</li>
             <li onclick="window.location.href='/baohiemanvuisongkhoe.html'">An vui sống khoẻ</li>
             <li onclick="window.location.href='/baohiemantamhocvan.html'">An tâm học vấn</li>
-            <li onclick="window.location.href='/index.html'">An phát trọn đời</li>
+            <li onclick="window.location.href='/baohiemanphattrondoi.html'">An phát trọn đời</li>
           </ul>
         </div>
       </li>
@@ -39,20 +44,18 @@
           </ul>
         </div>
       </li>
-      <li class="">Tuyển dụng</li>
-
+      <li>Tuyển dụng</li>
     </ul>
     <div class="contact-wrapper">
-      <img class="phone-logo" src="https://img.icons8.com/ios_filled/512/FAB005/apple-phone.png" alt="Phone icon"
-        srcset="">
+      <img class="phone-logo" src="https://img.icons8.com/ios_filled/512/FAB005/apple-phone.png" alt="Phone icon">
       <div class="contact-detail">
         <p class="contact-title">Tư vấn miễn phí</p>
-        <p class="phone-number">0905.499.496</p>
+        <p class="phone-number">0905.499.496 <span style="color: black; font-weight: 600;">/</span>
+          0931.909.697
+        </p>
       </div>
     </div>
-    </div>
   </nav>
-
   <div class="container">
 
     <div class="card-block">
@@ -73,7 +76,11 @@
         <div style="display: flex; gap: 10px; align-items: center;">
           <img style="height: 25px; width: 25px;" class="nav_icon mr-lg-2"
             src="https://seeklogo.com/images/Z/zalo-logo-BB6C937412-seeklogo.com.png" alt="">
-          <a style="font-size: 14px; margin: 0; cursor: pointer;" href="https://zalo.me/84931909697">0905.499.496</a>
+          <a style="font-size: 14px; margin: 0; cursor: pointer; width:fit-content;"
+            href="tel:+84905499496">0905.499.496</a>
+          <span>/</span>
+          <a style="font-size: 14px; margin: 0; cursor: pointer; width:fit-content;"
+            href="https://zalo.me/84931909697">0931.909.697</a>
         </div>
       </div>
     </div>
@@ -107,7 +114,7 @@
 
     <div class="infor-item" style="display: flex; flex-direction: column; width: 75%; margin: 50px auto;">
       <p
-        style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
+        style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274); margin-bottom: 0;">
         Đối tượng</p>
       <div>
         <ul style="list-style:disc">
@@ -119,7 +126,7 @@
 
     <div class="infor-item" style="display: flex; flex-direction: column; width: 75%; margin: 50px auto;">
       <p
-        style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
+        style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274); margin-bottom: 0;">
         Quyền lợi chính</p>
       <div id="benefit-tabs" style="display: flex; justify-content: center; gap: 20px">
         <div class="benefits-tab">
@@ -235,9 +242,10 @@
           </tr>
           <tr>
             <td>
-              <p><strong>C. Chi phí vận chuyển y tế cấp cứu</strong></p>
+              <p style="margin-top:0;"><strong>C. Chi phí vận chuyển y tế cấp cứu</strong></p>
 
-              <p>(Bao gồm chi phí cho việc vận chuyển y tế, được đánh giá là cần thiết, đến một địa điểm mới)</p>
+              <p style="margin-top:0;">(Bao gồm chi phí cho việc vận chuyển y tế, được đánh giá là cần thiết, đến một
+                địa điểm mới)</p>
             </td>
             <td style="height:25px; width:150px">Chi trả toàn bộ</td>
             <td style="height:25px; width:150px">Chi trả toàn bộ</td>
@@ -251,45 +259,47 @@
           </tr>
           <tr>
             <td>
-              <p><strong>E. Trợ cấp nằm viện</strong></p>
+              <p style="margin-top:0;"><strong>E. Trợ cấp nằm viện</strong></p>
 
-              <p>(Cung cấp trợ cấp ngày cho mỗi ngày trọn vẹn Người được bảo hiểm nằm viện)</p>
+              <p style="margin-top:0;">(Cung cấp trợ cấp ngày cho mỗi ngày trọn vẹn Người được bảo hiểm nằm viện)</p>
             </td>
             <td style="height:25px; width:150px">Không áp dụng</td>
             <td style="height:25px; width:150px">
-              <p>1.000.000đ/ngày</p>
+              <p style="margin-top:0;">1.000.000đ/ngày</p>
 
-              <p>Tối đa 20.000.000đ</p>
+              <p style="margin-top:0;">Tối đa 20.000.000đ</p>
             </td>
             <td style="height:25px; width:150px">
-              <p>1.000.000đ/ngày</p>
+              <p style="margin-top:0;">1.000.000đ/ngày</p>
 
-              <p>Tối đa 40.000.000đ</p>
+              <p style="margin-top:0;">Tối đa 40.000.000đ</p>
             </td>
           </tr>
           <tr>
             <td>
-              <p><strong>F. Hành lý và tư trang</strong></p>
+              <p style="margin-top:0;"><strong>F. Hành lý và tư trang</strong></p>
 
-              <p>(Cung cấp quyền lợi bảo hiểm đối với các đồ vật bị mất hoặc hư hỏng trong chuyến đi)</p>
+              <p style="margin-top:0;">(Cung cấp quyền lợi bảo hiểm đối với các đồ vật bị mất hoặc hư hỏng trong chuyến
+                đi)</p>
             </td>
             <td style="height:25px; width:150px">Không áp dụng</td>
             <td style="height:25px; width:150px">
-              <p>5.000.000đ/đồ vật</p>
+              <p style="margin-top:0;">5.000.000đ/đồ vật</p>
 
-              <p>Tối đa &nbsp;25.000.000đ</p>
+              <p style="margin-top:0;">Tối đa &nbsp;25.000.000đ</p>
             </td>
             <td style="height:25px; width:150px">
-              <p>10.000.000đ/đồ vật</p>
+              <p style="margin-top:0;">10.000.000đ/đồ vật</p>
 
-              <p>&nbsp;Tối đa 50.000.000đ</p>
+              <p style="margin-top:0;">&nbsp;Tối đa 50.000.000đ</p>
             </td>
           </tr>
           <tr>
             <td>
-              <p><strong>G. Nhận hành lý chậm</strong></p>
+              <p style="margin-top:0;"><strong>G. Nhận hành lý chậm</strong></p>
 
-              <p>(Cung cấp quyền lợi bảo hiểm trong trường hợp cần mua gấp các vật dung cần thiết do nhận hành lý chậm
+              <p style="margin-top:0;">(Cung cấp quyền lợi bảo hiểm trong trường hợp cần mua gấp các vật dung cần thiết
+                do nhận hành lý chậm
                 ít nhất 8 tiếng)</p>
             </td>
             <td style="height:25px; width:150px">Không áp dụng</td>
@@ -298,27 +308,29 @@
           </tr>
           <tr>
             <td>
-              <p><strong>F. Hành lý và tư trang</strong></p>
+              <p style="margin-top:0;"><strong>F. Hành lý và tư trang</strong></p>
 
-              <p>(Cung cấp quyền lợi bảo hiểm đối với các đồ vật bị mất hoặc hư hỏng trong chuyến đi)</p>
+              <p style="margin-top:0;">(Cung cấp quyền lợi bảo hiểm đối với các đồ vật bị mất hoặc hư hỏng trong chuyến
+                đi)</p>
             </td>
             <td style="height:25px; width:150px">Không áp dụng</td>
             <td style="height:25px; width:150px">
-              <p>5.000.000đ/đồ vật</p>
+              <p style="margin-top:0;">5.000.000đ/đồ vật</p>
 
-              <p>Tối đa 25.000.000đ</p>
+              <p style="margin-top:0;">Tối đa 25.000.000đ</p>
             </td>
             <td style="height:25px; width:150px">
-              <p>10.000.000đ/đồ vật</p>
+              <p style="margin-top:0;">10.000.000đ/đồ vật</p>
 
-              <p>Tối đa 50.000.000đ</p>
+              <p style="margin-top:0;">Tối đa 50.000.000đ</p>
             </td>
           </tr>
           <tr>
             <td>
-              <p><strong>G. Nhận hành lý chậm</strong></p>
+              <p style="margin-top:0;"><strong>G. Nhận hành lý chậm</strong></p>
 
-              <p>(Cung cấp quyền lợi bảo hiểm trong trường hợp cần mua gấp các vật dung cần thiết do nhận hành lý chậm
+              <p style="margin-top:0;">(Cung cấp quyền lợi bảo hiểm trong trường hợp cần mua gấp các vật dung cần thiết
+                do nhận hành lý chậm
                 ít nhất 8 tiếng)</p>
             </td>
             <td style="height:25px; width:150px">Không áp dụng</td>
@@ -327,28 +339,30 @@
           </tr>
           <tr>
             <td>
-              <p><strong>H. Tiền mang theo và Giấy tờ thông hành</strong></p>
+              <p style="margin-top:0;"><strong>H. Tiền mang theo và Giấy tờ thông hành</strong></p>
 
-              <p>(Cung cấp quyền lợi bảo hiểm trong trường hợp bị mất Tiền và Giấy tờ thông hành mang theo do mất cắp
+              <p style="margin-top:0;">(Cung cấp quyền lợi bảo hiểm trong trường hợp bị mất Tiền và Giấy tờ thông hành
+                mang theo do mất cắp
                 hoặc thiên tai cộng với chi phí ăn ở. đi lại phát sinh thêm)</p>
             </td>
             <td style="height:25px; width:150px">Không áp dụng</td>
             <td style="height:25px; width:150px">
-              <p>Tiền mang theo 4.000.000đ</p>
+              <p style="margin-top:0;">Tiền mang theo 4.000.000đ</p>
 
-              <p>Các chi phí khác 20.000.000đ</p>
+              <p style="margin-top:0;">Các chi phí khác 20.000.000đ</p>
             </td>
             <td style="height:25px; width:150px">
-              <p>Tiền mang theo 4.000.000đ</p>
+              <p style="margin-top:0;">Tiền mang theo 4.000.000đ</p>
 
-              <p>Các chi phí khác 20.000.000đ</p>
+              <p style="margin-top:0;">Các chi phí khác 20.000.000đ</p>
             </td>
           </tr>
           <tr>
             <td>
-              <p><strong>I. Trách nhiệm cá nhân</strong></p>
+              <p style="margin-top:0;"><strong>I. Trách nhiệm cá nhân</strong></p>
 
-              <p>(Cung cấp quyền lợi bảo hiểm trong trường hợp bị khiếu nại về trách nhiệm pháp lý đối với thương tật
+              <p style="margin-top:0;">(Cung cấp quyền lợi bảo hiểm trong trường hợp bị khiếu nại về trách nhiệm pháp lý
+                đối với thương tật
                 thân thể hoặc hư hỏng tài sản do một sự kiện xảy ra trong chuyến đi)</p>
             </td>
             <td style="height:25px; width:150px">Không áp dụng</td>
@@ -357,28 +371,30 @@
           </tr>
           <tr>
             <td>
-              <p><strong>J. Chuyến đi bị trì hoãn</strong></p>
+              <p style="margin-top:0;"><strong>J. Chuyến đi bị trì hoãn</strong></p>
 
-              <p>(Cung cấp quyền lợi bảo hiểm trong trường hợp hãng vận tải công cộng xuất phát chậm ít nhất 8 tiếng)
+              <p style="margin-top:0;">(Cung cấp quyền lợi bảo hiểm trong trường hợp hãng vận tải công cộng xuất phát
+                chậm ít nhất 8 tiếng)
               </p>
             </td>
             <td style="height:25px; width:150px">Không áp dụng</td>
             <td style="height:25px; width:150px">
-              <p>2.000.000đ cho mỗi 8 tiếng</p>
+              <p style="margin-top:0;">2.000.000đ cho mỗi 8 tiếng</p>
 
-              <p>Tối đa 10.000.000đ</p>
+              <p style="margin-top:0;">Tối đa 10.000.000đ</p>
             </td>
             <td style="height:25px; width:150px">
-              <p>2.000.000đ cho mỗi 8 tiếng</p>
+              <p style="margin-top:0;">2.000.000đ cho mỗi 8 tiếng</p>
 
-              <p>Tối đa&nbsp;10.000.000đ</p>
+              <p style="margin-top:0;">Tối đa&nbsp;10.000.000đ</p>
             </td>
           </tr>
           <tr>
             <td>
-              <p><strong>K. Mất tiền đặt cọc hay hủy bỏ chuyến đi</strong></p>
+              <p style="margin-top:0;"><strong>K. Mất tiền đặt cọc hay hủy bỏ chuyến đi</strong></p>
 
-              <p>(Cung cấp quyền lợi bảo hiểm đối với các khoản đặt cọc và thanh toán không được hoàn lại do hủy chuyến
+              <p style="margin-top:0;">(Cung cấp quyền lợi bảo hiểm đối với các khoản đặt cọc và thanh toán không được
+                hoàn lại do hủy chuyến
                 đi vì các lý do được nêu trong đơn bảo hiểm)</p>
             </td>
             <td style="height:25px; width:150px">Không áp dụng</td>
@@ -387,9 +403,10 @@
           </tr>
           <tr>
             <td>
-              <p><strong>L. Rút ngắn chuyến đi</strong></p>
+              <p style="margin-top:0;"><strong>L. Rút ngắn chuyến đi</strong></p>
 
-              <p>(Cung cấp quyền lợi bảo hiểm đối với các chi phí không hoàn lại phát sinh từ việc chuyến đi bị buộc
+              <p style="margin-top:0;">(Cung cấp quyền lợi bảo hiểm đối với các chi phí không hoàn lại phát sinh từ việc
+                chuyến đi bị buộc
                 phải rút ngắn do thành viên gia đình bị chết hoặc bị thương tật/ốm đau nghiêm trọng hoặc do nổi loạn
                 hoặc bạo loạn dân sự)</p>
             </td>
@@ -399,9 +416,10 @@
           </tr>
           <tr>
             <td>
-              <p><strong>M. Chơi golf 'Hole in One'</strong></p>
+              <p style="margin-top:0;"><strong>M. Chơi golf 'Hole in One'</strong></p>
 
-              <p>(Cung cấp quyền lợi bảo hiểm đối với những chi phí phát sinh sau khi đạt được cú đánh "hole in one"
+              <p style="margin-top:0;">(Cung cấp quyền lợi bảo hiểm đối với những chi phí phát sinh sau khi đạt được cú
+                đánh "hole in one"
                 trong chuyến đi)</p>
             </td>
             <td style="height:25px; width:150px">Không áp dụng</td>
@@ -410,9 +428,10 @@
           </tr>
           <tr>
             <td>
-              <p><strong>N. Bồi hoàn khấu trừ bảo hiểm của phương tiện thuê</strong></p>
+              <p style="margin-top:0;"><strong>N. Bồi hoàn khấu trừ bảo hiểm của phương tiện thuê</strong></p>
 
-              <p>(Cung cấp quyền lợi bảo hiểm đối với mức khấu trừ trong đơn bảo hiểm xe mà Người được bảo hiểm phải trả
+              <p style="margin-top:0;">(Cung cấp quyền lợi bảo hiểm đối với mức khấu trừ trong đơn bảo hiểm xe mà Người
+                được bảo hiểm phải trả
                 do tai nạn xảy ra với chiếc xe mà Người được bảo hiểm thuê)</p>
             </td>
             <td style="height:25px; width:150px">Không áp dụng</td>
@@ -426,7 +445,7 @@
     <div class="infor-item"
       style="display: flex; flex-direction: column; width: 75%; margin: 50px auto; display: flex; flex-direction: column;">
       <p
-        style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
+        style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274); margin-bottom: 0;">
         Tài liệu biểu mẫu</p>
       <div id="documentation" style="display: flex; gap: 20px; width: 100%; align-items: start;">
         <img
@@ -439,7 +458,7 @@
             <div style="display: flex; gap: 10px; align-items: center;">
               <img style="width: 17px; height: 19px;"
                 src="https://baovietonline.com.vn/templates/images/icon_tai_lieu_bieu_mau.png" alt="" srcset="">
-              <p>Quy tắc bảo hiểm</p>
+              <p style="margin-top:0;">Quy tắc bảo hiểm</p>
             </div>
             <a style="display: flex; gap:10px; align-items: center; width: fit-content; cursor: pointer;"
               href="https://baovietonline.com.vn/uploads/attachment/c1cac82b666e25113a05c54b9d500ee3.pdf">
@@ -453,7 +472,7 @@
             <div style="display: flex; gap: 10px; align-items: center;">
               <img style="width: 17px; height: 19px;"
                 src="https://baovietonline.com.vn/templates/images/icon_tai_lieu_bieu_mau.png" alt="" srcset="">
-              <p>Hướng dẫn bồi thường</p>
+              <p style="margin-top:0;">Hướng dẫn bồi thường</p>
             </div>
             <a style="display: flex; gap:10px; align-items: center; width: fit-content; cursor: pointer;"
               href="https://baovietonline.com.vn/uploads/attachment/5106fda0d9ed7634cfb644365c8f48f0.pdf">
@@ -467,7 +486,7 @@
             <div style="display: flex; gap: 10px; align-items: center;">
               <img style="width: 17px; height: 19px;"
                 src="https://baovietonline.com.vn/templates/images/icon_tai_lieu_bieu_mau.png" alt="" srcset="">
-              <p>Quyền lợi bảo hiểm</p>
+              <p style="margin-top:0;">Quyền lợi bảo hiểm</p>
             </div>
             <a style="display: flex; gap:10px; align-items: center; width: fit-content; cursor: pointer;"
               href="https://baovietonline.com.vn/uploads/attachment/102408939e481b85487b8cd66d00884b.pdf">
@@ -494,7 +513,7 @@
       <div class="infor-col">
         <p class="title">Thông tin liên hệ</p>
         <ul>
-          <li>Số điện thoại: 0905.499.496</li>
+          <li>Số điện thoại: 0905.499.496 / 0931.909.697</li>
           <li>Gmail: <a href="mailto:vanthangnguyen1802@gmail.com">
               vanthangnguyen1802@gmail.com
             </a></li>
@@ -513,7 +532,7 @@
       </div>
       <div class="infor-col">
         <p class="title">Giải thưởng danh giá</p>
-        <p>Bảo hiểm phi nhân thọ tốt nhất Việt Nam</p>
+        <p style="margin-top:0;">Bảo hiểm phi nhân thọ tốt nhất Việt Nam</p>
         <div style="display: flex; gap: 12px">
           <img class="icon_gt" src="https://baovietonline.com.vn/uploads/content/e3753335c1f0f2538ee6fc0f07e4b2b0.png"
             alt="">
@@ -528,5 +547,10 @@
     </div>
   </footer>
 </body>
+<script>
+  function toggleMenu() {
+    document.getElementById("menu").classList.toggle("active");
+  }
+</script>
 
 </html>
